# discord-bot

./: .editorconfig  .env.example  .gitignore  README.md  discord-bot.sh  main.py  pyproject.toml  settings.py
.github/workflows/: litesecbot-app.yml
cogs/: chat.py  chatgpt.py  music.py  musica.py
functions/: webhook.py
